# ESP32-C6-LCD-1.47-MQTT-BROKER

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/PicoMQTT/: CMakeLists.txt  idf_component.yml
main/: CMakeLists.txt  NvsSettingsAccessor.cpp  NvsSettingsAccessor.h  SpiMipiLvglDisplayDriver.cpp  SpiMipiLvglDisplayDriver.h  idf_component.yml  main.cpp
